--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,6 +48,7 @@ body {
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -88,10 +89,12 @@ body {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
 }
+
 .flip-card {
   perspective: 1000px;
   height: 150px;
@@ -111,7 +114,8 @@ body {
   transform: rotateX(180deg);
 }
 
-.flip-card-front, .flip-card-back {
+.flip-card-front,
+.flip-card-back {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -128,4 +132,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.main-title {
+    font-size: 2rem;
+    width: 41%;
+    margin-top: 5rem;
+    line-height: 51px;
+    margin-left: 1.33rem;
+}
+@media (max-width:768px){
+    .main-title {
+        font-size: unset;
+        line-height: normal;
+        margin-top: 2rem;
+    }
 }
