--- a/styles/globals.css
+++ b/styles/globals.css
@@ -197,3 +197,8 @@ body {
       top: 20%;
     }
 }
+@media screen and (max-width: 568px) {
+.mainbanner2 .main-title{
+    font-size: 12px;
+  }
+}
